Convert old Mac line endings in lyrics tags

Qt automatically converts Windows-style line endings (`\r\n`) but not
old Mac line endings (`\r`), probably because it is a platform that has
been dead for over 20 years. However some people have songs with embedded
lyrics tags that were encoded on that platform, and as a result, these
lyrics do not show up properly in various places where lyrics can be
viewed, such as Elisa's context view and dolphin's Information Panel.

This commit replaces old Mac line endings with conventional UNIX-style
line endings. Windows line endings are not affected because
`QLatin1Char('\r')` does not match the windows style line ending as it
is only a single character.

BUG: 425563
FIXED-IN: 5.74